--- a/Leaflet-Step-1/style.css
+++ b/Leaflet-Step-1/style.css
@@ -10,3 +10,29 @@ body,
 html {
   height: 100%;
 }
+
+h3 {
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+}
+
+.legend {
+  line-height: 18px;
+  color: #555;
+  background-color: white;
+  padding: 10px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
